2007-01-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-missing-plugins.c:
	(totem_on_missing_plugins_event):
	  Print and use correct string arrays here (ie. the filtered ones,
	  and not the original one including items already blacklisted).

2007-01-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_check_missing_plugins_error):
	(bvw_bus_message_cb):
	  When we got an error because we're missing the required source or
	  decoder plugins AND the missing-plugin signal was handled, then make
	  sure we're not processing any further (less precise/generic) error
	  messages that may also be on the bus.
	  Convert error to BVW error when an error occurs asynchroneously too.

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/5.html: add simple QuickTime test

2007-01-12  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_get_missing_plugins_foo):
	(bvw_get_missing_plugins_details):
	(bvw_get_missing_plugins_descriptions):
	(bvw_clear_missing_plugins_messages):
	(bvw_emit_missing_plugins_signal):
	(bvw_error_from_gst_error):
	(bacon_video_widget_open_with_subtitle):
	(bvw_stop_play_pipeline):
	  Only clear the list of missing plugins when we know that we won't
	  need them any longer (_stop() might be called from _open_with_uri()
	  before we assemble our proper error message, so don't clear list
	  there).

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_open_internal), (totem_embedded_play),
	(totem_embedded_set_error_logo),
	(totem_embedded_open_playlist_item), (totem_embedded_construct),
	(totem_embedded_push_parser): Some cleanups, start playing the
	playlist when the browser set it for us

2007-01-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_play), (bacon_video_widget_pause):