@@ -1,5 +1,13 @@
 2007-01-13  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bvw_error_from_gst_error):
+	  When playback files because a required source or decoder plugin is
+	  missing, tell the user exactly what it is that they are missing in
+	  the error message (Closes: #380198).
+
+2007-01-13  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* src/totem-missing-plugins.c:
 	(totem_on_missing_plugins_event):
 	  Print and use correct string arrays here (ie. the filtered ones,
